--- a/requirements_server.txt
+++ b/requirements_server.txt
@@ -1,3 +1,6 @@
+torch==1.8.1+cu111 -f https://download.pytorch.org/whl/torch_stable.html
+torchvision==0.9.1+cu111 -f https://download.pytorch.org/whl/torch_stable.html
+torchaudio==0.8.1 -f https://download.pytorch.org/whl/torch_stable.html
 pytorch-lightning==1.4.5
 torchmetrics==0.5.0
 scipy==1.5.4
@@ -9,3 +12,4 @@ lpips==0.1.4
 lmdb==1.2.1
 ftfy
 regex
+Pillow==9.5.0
