update gitignore to ignore EEG images and labels pickle file

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ temp
 __pycache__
 generated
 latent_infer
+datasets/EEG_images.pickle
+datasets/EEG_labels.pickle
 datasets/bedroom256.lmdb
 datasets/horse256.lmdb
 datasets/celebahq
